# 3316_flask_api

./: README.md  pyproject.toml
src/: app.py
src/templates/: index.html
